Sprint 3 backend: favorites, policies, reviews, delete category + security config fix