@@ -2,6 +2,7 @@ package com.miapp.reservashotel.service.impl;
 
 import com.miapp.reservashotel.dto.ProductRequestDTO;
 import com.miapp.reservashotel.dto.ProductResponseDTO;
+import com.miapp.reservashotel.exception.ResourceNotFoundException;
 import com.miapp.reservashotel.model.Category;
 import com.miapp.reservashotel.model.City;
 import com.miapp.reservashotel.model.Feature;
@@ -14,21 +15,14 @@ import com.miapp.reservashotel.service.ProductService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.math.BigDecimal;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
- * ProductService implementation with resilient DTO mapping:
- * - Accepts values from different DTO shapes (name/title, description/details/summary, etc.).
- * - Resolves Category and City by:
- *   1) explicit id (categoryId/cityId),
- *   2) nested object (getCategory()/getCity() -> getId()/getName()),
- *   3) name fields (categoryName/cityName),
- *   4) fallback to the first available entity in DB (handy for H2 tests).
- * - Collects features by ids or nested Feature objects (using their ids).
- * - All reflection helpers are defensive to avoid test fragility.
+ * Service implementation for Product operations.
+ * No Lombok: explicit constructor injection and plain Java getters/setters.
  */
 @Service
 @Transactional
@@ -39,10 +33,12 @@ public class ProductServiceImpl implements ProductService {
     private final CityRepository cityRepository;
     private final FeatureRepository featureRepository;
 
-    public ProductServiceImpl(ProductRepository productRepository,
-                              CategoryRepository categoryRepository,
-                              CityRepository cityRepository,
-                              FeatureRepository featureRepository) {
+    public ProductServiceImpl(
+            ProductRepository productRepository,
+            CategoryRepository categoryRepository,
+            CityRepository cityRepository,
+            FeatureRepository featureRepository
+    ) {
         this.productRepository = productRepository;
         this.categoryRepository = categoryRepository;
         this.cityRepository = cityRepository;
@@ -50,353 +46,303 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public ProductResponseDTO createProduct(ProductRequestDTO productRequestDTO) {
-        Product saved = createProduct((Object) productRequestDTO);
-        return toResponse(saved);
+    public ProductResponseDTO createProduct(ProductRequestDTO dto) {
+        if (dto == null) throw new IllegalArgumentException("ProductRequestDTO must not be null");
+        Product p = new Product();
+        applyDtoToEntity(p, dto);
+        return toResponseDTO(productRepository.save(p));
+    }
+
+    /**
+     * Utility used by tests that may pass different DTO shapes.
+     */
+    @Override
+    public Product createProduct(Object requestDto) {
+        if (requestDto == null) throw new IllegalArgumentException("requestDto must not be null");
+        Product p = new Product();
+        applyFlexibleDtoToEntity(p, requestDto);
+        return productRepository.save(p);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<ProductResponseDTO> getAllProducts() {
-        return productRepository.findAll().stream().map(this::toResponse).toList();
+        return productRepository.findAll().stream().map(this::toResponseDTO).collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
     public ProductResponseDTO getProductById(Long id) {
-        Product product = productRepository.findById(id)
-            .orElseThrow(() -> new IllegalArgumentException("Product not found: " + id));
-        return toResponse(product);
+        Product p = productRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found with id: " + id));
+        return toResponseDTO(p);
     }
 
     @Override
-    public ProductResponseDTO updateProduct(Long id, ProductRequestDTO productRequestDTO) {
-        Product product = productRepository.findById(id)
-            .orElseThrow(() -> new IllegalArgumentException("Product not found: " + id));
-
-        // Strings
-        String name = readStringWithFallbacks(productRequestDTO,
-            "getName", "name",
-            "getTitle", "title",
-            "getProductName", "productName"
-        );
-        String description = readStringWithFallbacks(productRequestDTO,
-            "getDescription", "description",
-            "getDetails", "details",
-            "getSummary", "summary"
-        );
-        BigDecimal price = readBigDecimalWithFallbacks(productRequestDTO, "getPrice", "price");
-
-        // Category / City (resolve robustly)
-        Category category = resolveCategoryFromRequest(productRequestDTO);
-        City city = resolveCityFromRequest(productRequestDTO);
-
-        // Features
-        Set<Long> featureIds = readLongSetFlexible(productRequestDTO,
-            // common: Set<Long>
-            "getFeatureIds", "featureIds",
-            // also accept collections of Feature-like objects
-            "getFeatures", "features"
-        );
-        Set<Feature> features = findFeatures(featureIds);
-
-        if (name != null) product.setName(name);
-        if (description != null) product.setDescription(description);
-        if (price != null) product.setPrice(price);
-        if (category != null) product.setCategory(category);
-        if (city != null) product.setCity(city);
-        if (features != null && !features.isEmpty()) product.setFeatures(features);
-
-        Product saved = productRepository.save(product);
-        return toResponse(saved);
+    public ProductResponseDTO updateProduct(Long id, ProductRequestDTO dto) {
+        Product p = productRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found with id: " + id));
+        applyDtoToEntity(p, dto);
+        return toResponseDTO(productRepository.save(p));
     }
 
     @Override
     public void deleteProduct(Long id) {
+        if (!productRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Product not found with id: " + id);
+        }
         productRepository.deleteById(id);
     }
 
-    /**
-     * Entry point used by controllers and tests. Accepts a flexible request object.
-     */
-    @Override
-    public Product createProduct(Object requestDto) {
-        if (requestDto == null) {
-            throw new IllegalArgumentException("requestDto must not be null");
-        }
+    // ---------- Mapping helpers ----------
 
-        // Strings
-        String name = readStringWithFallbacks(requestDto,
-            "getName", "name",
-            "getTitle", "title",
-            "getProductName", "productName"
-        );
-        String description = readStringWithFallbacks(requestDto,
-            "getDescription", "description",
-            "getDetails", "details",
-            "getSummary", "summary"
-        );
-        BigDecimal price = readBigDecimalWithFallbacks(requestDto, "getPrice", "price");
-
-        // Category / City (do not hard-fail if id missing; resolve by id/object/name or fallback to first in DB)
-        Category category = resolveCategoryFromRequest(requestDto);
-        City city = resolveCityFromRequest(requestDto);
-
-        if (category == null) {
-            category = categoryRepository.findAll().stream().findFirst()
-                .orElseThrow(() -> new IllegalArgumentException("No Category available to assign"));
-        }
-        if (city == null) {
-            city = cityRepository.findAll().stream().findFirst()
-                .orElseThrow(() -> new IllegalArgumentException("No City available to assign"));
-        }
-
-        // Features
-        Set<Long> featureIds = readLongSetFlexible(requestDto,
-            "getFeatureIds", "featureIds",
-            "getFeatures", "features"
-        );
-        Set<Feature> features = findFeatures(featureIds);
-
-        Product product = new Product();
-        // If tests use "title" (e.g., "Ocean View"), ensure it becomes product.name
-        product.setName(name);
-        product.setDescription(description);
-        if (price != null) product.setPrice(price);
-        product.setCategory(category);
-        product.setCity(city);
-        if (features != null && !features.isEmpty()) product.setFeatures(features);
-
-        return productRepository.save(product);
-    }
-
-    /* ---------- Resolvers for Category/City/Features ---------- */
-
-    private Category resolveCategoryFromRequest(Object request) {
-        // First try explicit id variants and nested object id
-        Long id = readLongFlexible(request, "getCategoryId", "categoryId", "getCategory", "category");
-        if (id != null) {
-            return categoryRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Category not found: " + id));
-        }
-        // Try by name fields or nested object name
-        String name = readStringWithFallbacks(request, "getCategoryName", "categoryName");
-        if (name == null) {
-            Object catObj = safeInvoke(request, "getCategory");
-            if (catObj == null) catObj = safeInvoke(request, "category");
-            if (catObj != null) {
-                name = readStringWithFallbacks(catObj, "getName", "name");
-            }
-        }
-        if (name != null && !name.isBlank()) {
-            // If repository has a "findByName", use it; otherwise fallback to scanning all.
-            Category found = findCategoryByName(name);
-            if (found != null) return found;
-        }
-        // Return null to allow caller to fallback to first() in DB
-        return null;
-    }
-
-    private City resolveCityFromRequest(Object request) {
-        Long id = readLongFlexible(request, "getCityId", "cityId", "getCity", "city");
-        if (id != null) {
-            return cityRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("City not found: " + id));
-        }
-        String name = readStringWithFallbacks(request, "getCityName", "cityName");
-        if (name == null) {
-            Object cityObj = safeInvoke(request, "getCity");
-            if (cityObj == null) cityObj = safeInvoke(request, "city");
-            if (cityObj != null) {
-                name = readStringWithFallbacks(cityObj, "getName", "name");
-            }
-        }
-        if (name != null && !name.isBlank()) {
-            City found = findCityByName(name);
-            if (found != null) return found;
-        }
-        return null;
-    }
-
-    private Category findCategoryByName(String name) {
-        // Try common method name; if not present in repo, fallback to linear scan
-        try {
-            Method m = categoryRepository.getClass().getMethod("findByName", String.class);
-            Object res = m.invoke(categoryRepository, name);
-            if (res instanceof Optional<?> opt && opt.isPresent() && opt.get() instanceof Category c) return c;
-            if (res instanceof Category c2) return c2;
-        } catch (Throwable ignore) { /* fall through */ }
-        return categoryRepository.findAll().stream()
-            .filter(c -> c.getName() != null && c.getName().equalsIgnoreCase(name))
-            .findFirst().orElse(null);
-    }
-
-    private City findCityByName(String name) {
-        try {
-            Method m = cityRepository.getClass().getMethod("findByName", String.class);
-            Object res = m.invoke(cityRepository, name);
-            if (res instanceof Optional<?> opt && opt.isPresent() && opt.get() instanceof City c) return c;
-            if (res instanceof City c2) return c2;
-        } catch (Throwable ignore) { /* fall through */ }
-        return cityRepository.findAll().stream()
-            .filter(c -> c.getName() != null && c.getName().equalsIgnoreCase(name))
-            .findFirst().orElse(null);
-    }
-
-    private Set<Feature> findFeatures(Set<Long> ids) {
-        if (ids == null || ids.isEmpty()) return new HashSet<>();
-        Set<Feature> out = new HashSet<>();
-        for (Long id : ids) {
-            if (id == null) continue;
-            featureRepository.findById(id).ifPresent(out::add);
-        }
-        return out;
-    }
-
-    /* ---------- Mapping to Response DTO ---------- */
-
-    private ProductResponseDTO toResponse(Product product) {
+    private ProductResponseDTO toResponseDTO(Product p) {
         ProductResponseDTO dto = new ProductResponseDTO();
-        tryInvokeSetter(dto, "setId", Long.class, product.getId());
-        tryInvokeSetter(dto, "setName", String.class, product.getName());
-        tryInvokeSetter(dto, "setDescription", String.class, product.getDescription());
-        tryInvokeSetter(dto, "setPrice", BigDecimal.class, product.getPrice());
+        dto.setId(p.getId());
+        dto.setName(p.getName());
+        dto.setDescription(p.getDescription());
+        dto.setImageUrl(p.getImageUrl());
+        dto.setPrice(p.getPrice());
+        dto.setCategoryId(p.getCategory() != null ? p.getCategory().getId() : null);
+        dto.setCityId(p.getCity() != null ? p.getCity().getId() : null);
 
-        Long categoryId = (product.getCategory() != null) ? product.getCategory().getId() : null;
-        Long cityId = (product.getCity() != null) ? product.getCity().getId() : null;
-        tryInvokeSetter(dto, "setCategoryId", Long.class, categoryId);
-        tryInvokeSetter(dto, "setCityId", Long.class, cityId);
-
-        Set<Long> featureIds = new HashSet<>();
-        if (product.getFeatures() != null) {
-            for (Feature f : product.getFeatures()) {
-                if (f != null && f.getId() != null) featureIds.add(f.getId());
-            }
-        }
-        tryInvokeSetter(dto, "setFeatureIds", Set.class, featureIds);
+        Set<Long> featureIds = Optional.ofNullable(p.getFeatures())
+                .orElseGet(Collections::emptySet)
+                .stream()
+                .map(Feature::getId)
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+        dto.setFeatureIds(featureIds);
         return dto;
     }
 
-    /* ---------- Reflection helpers (defensive) ---------- */
+    private void applyDtoToEntity(Product target, ProductRequestDTO dto) {
+        if (dto.getName() != null) target.setName(dto.getName());
+        if (dto.getDescription() != null) target.setDescription(dto.getDescription());
+        if (dto.getImageUrl() != null) target.setImageUrl(dto.getImageUrl());
+        if (dto.getPrice() != null) target.setPrice(dto.getPrice());
 
-    private static Object safeInvoke(Object target, String methodName) {
-        if (target == null || methodName == null) return null;
-        Class<?> clazz = target.getClass();
-        try {
-            Method m;
-            try {
-                m = clazz.getMethod(methodName);
-            } catch (NoSuchMethodException ignore) {
-                m = clazz.getDeclaredMethod(methodName);
-                m.setAccessible(true);
+        if (dto.getCategoryId() != null) {
+            Category category = categoryRepository.findById(dto.getCategoryId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + dto.getCategoryId()));
+            target.setCategory(category);
+        }
+
+        if (dto.getCityId() != null) {
+            City city = cityRepository.findById(dto.getCityId())
+                    .orElseThrow(() -> new ResourceNotFoundException("City not found with id: " + dto.getCityId()));
+            target.setCity(city);
+        }
+
+        if (dto.getFeatureIds() != null) {
+            Set<Feature> features = new LinkedHashSet<>();
+            for (Long fid : dto.getFeatureIds()) {
+                Feature f = featureRepository.findById(fid)
+                        .orElseThrow(() -> new ResourceNotFoundException("Feature not found with id: " + fid));
+                features.add(f);
             }
-            return m.invoke(target);
-        } catch (Throwable t) {
-            return null;
+            target.setFeatures(features);
         }
     }
 
-    private static void tryInvokeSetter(Object target, String setterName, Class<?> paramType, Object arg) {
-        if (target == null || setterName == null) return;
-        Class<?> clazz = target.getClass();
-        try {
-            Method m = clazz.getMethod(setterName, paramType);
-            m.invoke(target, arg);
-            return;
-        } catch (Throwable ignore) {
-        }
-        try {
-            Field f = findFieldBySetterFallback(clazz, setterName);
-            if (f != null) {
-                f.setAccessible(true);
-                f.set(target, arg);
+    private void applyFlexibleDtoToEntity(Product target, Object flexibleDto) {
+        // --- Basic fields (strings & numbers) ---
+        String name = readStringWithFallbacks(flexibleDto, "getName", "name", "getTitle", "title");
+        String description = readStringWithFallbacks(flexibleDto, "getDescription", "description", "getDetails", "details", "getSummary", "summary");
+        String imageUrl = readStringWithFallbacks(flexibleDto, "getImageUrl", "imageUrl", "getImageURL", "imageURL", "getImage", "image");
+        BigDecimal price = readBigDecimalWithFallbacks(flexibleDto, "getPrice", "price");
+
+        if (name != null) target.setName(name);
+        if (description != null) target.setDescription(description);
+        if (imageUrl != null) target.setImageUrl(imageUrl);
+        if (price != null) target.setPrice(price);
+
+        // --- Category: accept id OR nested object ---
+        Long categoryId = readLongWithFallbacks(flexibleDto, "getCategoryId", "categoryId");
+        if (categoryId != null) {
+            Category category = categoryRepository.findById(categoryId)
+                    .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + categoryId));
+            target.setCategory(category);
+        } else {
+            Object catObj = invokeGetter(flexibleDto, "getCategory", "category");
+            if (catObj instanceof Category cat) {
+                target.setCategory(cat);
+            } else {
+                Long nestedCatId = readLongWithFallbacks(catObj, "getId", "id");
+                if (nestedCatId != null) {
+                    Category category = categoryRepository.findById(nestedCatId)
+                            .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + nestedCatId));
+                    target.setCategory(category);
+                }
             }
-        } catch (Throwable ignore) {
+        }
+
+        // --- City: accept id OR nested object ---
+        Long cityId = readLongWithFallbacks(flexibleDto, "getCityId", "cityId");
+        if (cityId != null) {
+            City city = cityRepository.findById(cityId)
+                    .orElseThrow(() -> new ResourceNotFoundException("City not found with id: " + cityId));
+            target.setCity(city);
+        } else {
+            Object cityObj = invokeGetter(flexibleDto, "getCity", "city");
+            if (cityObj instanceof City c) {
+                target.setCity(c);
+            } else {
+                Long nestedCityId = readLongWithFallbacks(cityObj, "getId", "id");
+                if (nestedCityId != null) {
+                    City city = cityRepository.findById(nestedCityId)
+                            .orElseThrow(() -> new ResourceNotFoundException("City not found with id: " + nestedCityId));
+                    target.setCity(city);
+                }
+            }
+        }
+
+        // --- Features: accept ids OR collection of Feature objects ---
+        Set<Long> featureIds = readLongSetFlexible(flexibleDto, "getFeatureIds", "featureIds");
+        if (featureIds == null) {
+            Object feats = invokeGetter(flexibleDto, "getFeatures", "features");
+            if (feats instanceof Collection<?> coll && !coll.isEmpty()) {
+                Set<Long> tmp = new LinkedHashSet<>();
+                for (Object it : coll) {
+                    Long id = readLongWithFallbacks(it, "getId", "id");
+                    if (id != null) tmp.add(id);
+                }
+                if (!tmp.isEmpty()) featureIds = tmp;
+            }
+        }
+        if (featureIds != null) {
+            Set<Feature> features = new LinkedHashSet<>();
+            for (Long fid : featureIds) {
+                Feature f = featureRepository.findById(fid)
+                        .orElseThrow(() -> new ResourceNotFoundException("Feature not found with id: " + fid));
+                features.add(f);
+            }
+            target.setFeatures(features);
         }
     }
 
-    private static Field findFieldBySetterFallback(Class<?> clazz, String setterName) {
-        if (!setterName.startsWith("set") || setterName.length() <= 3) return null;
-        String base = setterName.substring(3);
-        String candidate1 = Character.toLowerCase(base.charAt(0)) + base.substring(1);
-        try {
-            return clazz.getDeclaredField(candidate1);
-        } catch (NoSuchFieldException e) {
-            return null;
-        }
-    }
+    // ---------- Tiny reflection helpers ----------
 
-    private static String readStringWithFallbacks(Object obj, String... getters) {
-        for (String g : getters) {
-            Object v = safeInvoke(obj, g);
+    private String readStringWithFallbacks(Object obj, String... names) {
+        if (obj == null) return null;
+        for (String n : names) {
+            Object v = invokeGetter(obj, n);
             if (v instanceof String s && !s.isBlank()) return s;
-            if (v != null) return v.toString();
         }
         return null;
     }
 
-    private static BigDecimal readBigDecimalWithFallbacks(Object obj, String... getters) {
-        for (String g : getters) {
-            Object v = safeInvoke(obj, g);
-            if (v == null) continue;
+    private BigDecimal readBigDecimalWithFallbacks(Object obj, String... names) {
+        if (obj == null) return null;
+        for (String n : names) {
+            Object v = invokeGetter(obj, n);
             if (v instanceof BigDecimal bd) return bd;
-            if (v instanceof Number n) return BigDecimal.valueOf(n.doubleValue());
-            if (v instanceof String s && !s.isBlank()) return new BigDecimal(s);
+            if (v instanceof Number num) return BigDecimal.valueOf(num.doubleValue());
+            if (v instanceof String s) {
+                try { return new BigDecimal(s); } catch (Exception ignored) {}
+            }
         }
         return null;
     }
 
-    private static Long readLongFlexible(Object obj, String... gettersOrObjectProps) {
-        for (String g : gettersOrObjectProps) {
-            Object v = safeInvoke(obj, g);
-            Long id = toLong(v);
-            if (id != null) return id;
+    private Long readLongWithFallbacks(Object obj, String... names) {
+        if (obj == null) return null;
+        for (String n : names) {
+            Object v = invokeGetter(obj, n);
+            if (v instanceof Long l) return l;
+            if (v instanceof Number num) return num.longValue();
+            if (v instanceof String s) {
+                try { return Long.parseLong(s); } catch (Exception ignored) {}
+            }
+        }
+        return null;
+    }
+
+    @SuppressWarnings("unchecked")
+    private Set<Long> readLongSetFlexible(Object obj, String... names) {
+        if (obj == null) return null;
+        for (String n : names) {
+            Object v = invokeGetter(obj, n);
+            if (v == null) continue;
+            if (v instanceof Set<?> set) {
+                Set<Long> out = new LinkedHashSet<>();
+                for (Object it : set) {
+                    Long val = convertToLong(it);
+                    if (val != null) out.add(val);
+                }
+                return out.isEmpty() ? null : out;
+            }
+            if (v instanceof List<?> list) {
+                Set<Long> out = new LinkedHashSet<>();
+                for (Object it : list) {
+                    Long val = convertToLong(it);
+                    if (val != null) out.add(val);
+                }
+                return out.isEmpty() ? null : out;
+            }
+            if (v instanceof Long l) return new LinkedHashSet<>(Collections.singletonList(l));
+            if (v instanceof Number num) return new LinkedHashSet<>(Collections.singletonList(num.longValue()));
+            if (v instanceof String s) {
+                String cleaned = s.replace("[", "").replace("]", "");
+                Set<Long> out = new LinkedHashSet<>();
+                for (String part : cleaned.split(",")) {
+                    String t = part.trim();
+                    if (!t.isEmpty()) {
+                        try { out.add(Long.parseLong(t)); } catch (Exception ignored) {}
+                    }
+                }
+                if (!out.isEmpty()) return out;
+            }
+        }
+        return null;
+    }
+
+    private Long convertToLong(Object it) {
+        if (it instanceof Long l) return l;
+        if (it instanceof Number num) return num.longValue();
+        if (it instanceof String s) {
+            try { return Long.parseLong(s); } catch (Exception ignored) {}
         }
         return null;
     }
 
     /**
-     * Reads a Set of ids from:
-     * - Set<Long>
-     * - Collection of Number/String
-     * - Collection of objects exposing getId()/id()
+     * Overload that tries multiple possible getter names (varargs).
+     * It will attempt:
+     * 1) The name as-is (e.g., "getCity")
+     * 2) If it doesn't start with "get", try "get" + capitalized (e.g., "city" -> "getCity")
+     * If obj is null or nothing matches, returns null.
      */
-    private static Set<Long> readLongSetFlexible(Object obj, String... getters) {
-        for (String g : getters) {
-            Object v = safeInvoke(obj, g);
-            if (v == null) continue;
+    private Object invokeGetter(Object obj, String... names) {
+        if (obj == null || names == null) return null;
+        for (String name : names) {
+            // Try exact name first
+            Object value = invokeGetterSingle(obj, name);
+            if (value != null) return value;
 
-            if (v instanceof Set<?> set) {
-                Set<Long> out = new HashSet<>();
-                for (Object o : set) {
-                    Long val = toLong(o);
-                    if (val != null) out.add(val);
-                }
-                return out;
-            }
-            if (v instanceof Collection<?> col) {
-                Set<Long> out = new HashSet<>();
-                for (Object o : col) {
-                    Long val = toLong(o);
-                    if (val != null) out.add(val);
-                }
-                return out;
+            // If the provided name doesn't start with "get", try bean-style "getXxx"
+            if (!name.startsWith("get")) {
+                String bean = "get" + Character.toUpperCase(name.charAt(0)) + name.substring(1);
+                value = invokeGetterSingle(obj, bean);
+                if (value != null) return value;
             }
         }
-        return new HashSet<>();
-    }
-
-    private static Long toLong(Object v) {
-        if (v == null) return null;
-        if (v instanceof Number n) return n.longValue();
-        if (v instanceof String s && !s.isBlank()) return Long.valueOf(s);
-        Object id = safeInvoke(v, "getId");
-        if (id == null) id = safeInvoke(v, "id");
-        if (id instanceof Number n2) return n2.longValue();
-        if (id instanceof String s2 && !s2.isBlank()) return Long.valueOf(s2);
         return null;
     }
+
+    /**
+     * Helper that invokes a single no-arg method name. Returns null if not found or on error.
+     */
+    private Object invokeGetterSingle(Object obj, String name) {
+        try {
+            Method m = obj.getClass().getMethod(name);
+            return m.invoke(obj);
+        } catch (Exception ignored) {
+            return null;
+        }
+    }
 }
+
+
 
 
 
